--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,60 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
   display: flex;
+  flex-direction: row;       
+  height:100vh !important;
+  width: 100vw !important; 
+  flex: 1;
+
+  background-color: rgb(59, 59, 61);
+
+}
+.app_2_header2{
+  display: none !important;
+}
+
+.app_2{
+  flex:1;
+  display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  max-width: 100vw !important;
+  
+
+}
+.intro_image{
+  height: 100px;
+  object-fit: contain;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+/* used media queries for all devices less tham 600px width to make the website responsive*/
+
+@media only screen and (max-width: 600px) {
+  .App {
+    flex: 1;
+    background-color: rgb(59, 59, 61);
+    overflow-x:hidden;
+    max-width: 100vw;
+  
+  }
+  .app_2{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    max-width: 100vw !important;
+  }
+  
+}
+@media only screen and (min-width: 600px) {
+  .app_2{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    max-width: 100vw !important;
+    padding: 20px;
+    
+  
+  }
+  
+  
+  
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
